syntax = "proto3";

package pb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// AppSecStruct is a container for AppSec data sent by the tracers.
message AppSecStruct {
    repeated AppSecTrigger triggers = 1 [(gogoproto.jsontag) = "triggers", (gogoproto.moretags) = "msg:\"triggers\""];
}

// AppSecTrigger contains triggers produced by Datadog tracers. Further
// documentation about the format of the triggers is available on https://github.com/DataDog/libddwaf.
message AppSecTrigger {
    AppSecRuleTrigger rule = 1 [(gogoproto.jsontag) = "rule", (gogoproto.moretags) = "msg:\"rule\""];
    repeated AppSecRuleMatch rule_matches = 2 [(gogoproto.jsontag) = "rule_matches", (gogoproto.moretags) = "msg:\"rule_matches\""];
}

// AppSecRuleTrigger represents an AppSec rule that triggered.
message AppSecRuleTrigger {
    string id = 1 [(gogoproto.jsontag) = "id", (gogoproto.moretags) = "msg:\"id\""];
    string name = 2 [(gogoproto.jsontag) = "name", (gogoproto.moretags) = "msg:\"name\""];
    map<string, string> tags = 3 [(gogoproto.jsontag) = "tags", (gogoproto.moretags) = "msg:\"tags\""];
}

// AppSecRuleMatch precises which part of the AppSec rule that triggered.
message AppSecRuleMatch {
    string operator = 1 [(gogoproto.jsontag) = "operator", (gogoproto.moretags) = "msg:\"operator\""];
    string operator_value = 2 [(gogoproto.jsontag) = "operator_value", (gogoproto.moretags) = "msg:\"operator_value\""];
    repeated AppSecRuleParameter parameters = 3 [(gogoproto.jsontag) = "parameters", (gogoproto.moretags) = "msg:\"parameters\""];
}

// AppSecRuleParameter represents the data matched by an AppSec rule.
message AppSecRuleParameter {
    string address = 1 [(gogoproto.jsontag) = "address", (gogoproto.moretags) = "msg:\"address\""];
    // key_path can be either string or int so it cannot be represented using protobuf
    //repeated string key_path = 2 [(gogoproto.jsontag) = "key_path", (gogoproto.moretags) = "msg:\"key_path\""];
    string value = 3 [(gogoproto.jsontag) = "value", (gogoproto.moretags) = "msg:\"value\""];
    repeated string highlight = 4 [(gogoproto.jsontag) = "highlight", (gogoproto.moretags) = "msg:\"highlight\""];
}
